# CG-Paint

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.py  imgui.ini  saved_shapes.objx
scripts/: build.bat  build.ps1  build.sh  setup.ps1
src/: api.hpp  main.cpp  util.cpp  util.hpp
src/cg/: canvas.cpp  canvas.hpp  canvas_item.cpp  canvas_item.hpp  geometry.cpp  geometry.hpp  input_event.hpp  math.cpp  math.hpp  tool_box.cpp  tool_box.hpp  tools.cpp  tools.hpp
src/cg/canvas_itens/: flag.cpp  flag.hpp  line.cpp  line.hpp  point.cpp  point.hpp  polygon.cpp  polygon.hpp
src/cg/fileSystem/: fileHandler.cpp  fileHandler.hpp
src/cg/file_system/: file_handler.cpp  file_handler.hpp
src/cg/geometry/: triangulation.cpp  triangulation.hpp
src/cg/tools/: ghost_line.cpp  ghost_line.hpp  gizmo.hpp  line_tool.cpp  line_tool.hpp  point_tool.cpp  point_tool.hpp  polygon_tool.cpp  polygon_tool.hpp  select_tool.cpp  select_tool.hpp
src/facade/: gui.hpp
src/fileSystem/: fileHandler.cpp  fileHandler.hpp
